# ayu

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
compiler/ayuc/: Cargo.toml
compiler/ayuc/src/: main.rs
compiler/ayuc_ast/: Cargo.toml
compiler/ayuc_ast/src/: expr.rs  item.rs  lib.rs  pat.rs  path.rs  stmt.rs  ty.rs
compiler/ayuc_ast/src/node/: mod.rs
compiler/ayuc_ast/src/node/expr/: call.rs  mod.rs
compiler/ayuc_ast/src/node/leaf/: ident.rs
compiler/ayuc_ast/src/node/stmt/: mod.rs
compiler/ayuc_ast_visit/: Cargo.toml
compiler/ayuc_ast_visit/src/: lib.rs  visitor.rs  walk.rs  walkable.rs
compiler/ayuc_codegen/: Cargo.toml
compiler/ayuc_codegen/src/: export.rs  lib.rs
compiler/ayuc_common/: Cargo.toml
compiler/ayuc_common/src/: lib.rs
compiler/ayuc_diagnostic/: Cargo.toml
compiler/ayuc_diagnostic/src/: lib.rs
compiler/ayuc_driver/: Cargo.toml
compiler/ayuc_driver/src/: lib.rs
compiler/ayuc_hir/: Cargo.toml
compiler/ayuc_hir/src/: def.rs  expr.rs  id.rs  item.rs  lib.rs  local.rs  module.rs  package.rs  pat.rs  stmt.rs  ty.rs
compiler/ayuc_id/: Cargo.toml
compiler/ayuc_id/src/: allocator.rs  ast.rs  hir.rs  lib.rs
compiler/ayuc_ir/: Cargo.toml
compiler/ayuc_ir/src/: lib.rs
compiler/ayuc_ir/src/node/: mod.rs
compiler/ayuc_ir/src/node/decl/: mod.rs
compiler/ayuc_ir/src/node/leaf/: ident.rs
compiler/ayuc_ir/src/node/stmt/: block.rs  fn_decl.rs  mod.rs
compiler/ayuc_lexer/: Cargo.toml
compiler/ayuc_lexer/src/: lib.rs  stream.rs  token.rs
compiler/ayuc_lexer/src/token/: keyword.rs  literal.rs  mod.rs  punct.rs
compiler/ayuc_lower/: Cargo.toml
compiler/ayuc_lower/src/: lib.rs  scope.rs
compiler/ayuc_parser/: Cargo.toml
compiler/ayuc_parser/src/: expr.rs  item.rs  lib.rs  parsable.rs  pat.rs  path.rs  session.rs  stmt.rs  ty.rs
compiler/ayuc_parser/src/impls/: expr.rs  item.rs  mod.rs  path.rs  stmt.rs  ty.rs
compiler/ayuc_parser/src/impls/decl/: function.rs
compiler/ayuc_parser/src/impls/expr/: call.rs
compiler/ayuc_parser/src/impls/leaf/: mod.rs
compiler/ayuc_parser/src/impls/stmt/: block.rs  fn_decl.rs  mod.rs
compiler/ayuc_pretty/: Cargo.toml
compiler/ayuc_pretty/src/: config.rs  doc.rs  lib.rs  renderer.rs
compiler/ayuc_printer/: Cargo.toml
compiler/ayuc_resolve/: Cargo.toml
compiler/ayuc_resolve/src/: def.rs  lib.rs  name_res.rs  resolver.rs  scope.rs  ty.rs  type_res.rs
compiler/ayuc_scanner/: Cargo.toml
compiler/ayuc_scanner/src/: lib.rs  predicate.rs  raw_token.rs
compiler/ayuc_sema/: Cargo.toml
compiler/ayuc_sema/src/: basic.rs  callcheck.rs  flow.rs  general.rs  lib.rs  mutability.rs  scope.rs  typecheck.rs
compiler/ayuc_sema/src/pass/: build_scope.rs  mod.rs  resolve_names.rs
compiler/ayuc_session/: Cargo.toml
compiler/ayuc_session/src/: item.rs  lib.rs  local.rs  session.rs
compiler/ayuc_source/: Cargo.toml
compiler/ayuc_source/src/: cache.rs  lib.rs
compiler/ayuc_span/: Cargo.toml
compiler/ayuc_span/src/: lib.rs  source.rs  symbol.rs
compiler/ayuc_tyctx/: Cargo.toml
compiler/ayuc_tyctx/src/: lib.rs
examples/: conditionals.ayu  exports.ayu  functions.ayu  hello_world.ayu  loops.ayu  modules.ayu  mutability.ayu  primitives.ayu  tuples.ayu  variables.ayu
