[workspace]
resolver = "3"
members = [
    "compiler/ayuc",
    "compiler/ayuc_ast",
    "compiler/ayuc_ast_visit",
    "compiler/ayuc_codegen",
    "compiler/ayuc_diagnostic",
    "compiler/ayuc_driver",
    "compiler/ayuc_hir",
    "compiler/ayuc_id",
    "compiler/ayuc_lexer",
    "compiler/ayuc_lower",
    "compiler/ayuc_parser",
    "compiler/ayuc_pretty",
    "compiler/ayuc_printer",
    "compiler/ayuc_resolve",
    "compiler/ayuc_scanner",
    "compiler/ayuc_sema",
    "compiler/ayuc_session",
    "compiler/ayuc_source",
    "compiler/ayuc_span",
]
