[package]
name = "ayuc_codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
ayuc_hir = { path = "../ayuc_hir" }
ayuc_id = { path = "../ayuc_id" }
ayuc_pretty = { path = "../ayuc_pretty" }
ayuc_lower = { path = "../ayuc_lower" }
ayuc_span = { path = "../ayuc_span" }
ayuc_session = { path = "../ayuc_session" }
ayuc_resolve = { path = "../ayuc_resolve" }
