[package]
name = "ayuc_driver"
version = "0.1.0"
edition = "2024"

[dependencies]
ayuc_source = { path = "../ayuc_source" }
ayuc_lexer = { path = "../ayuc_lexer" }
ayuc_parser = { path = "../ayuc_parser" }
ayuc_session = { path = "../ayuc_session" }
ayuc_lower = { path = "../ayuc_lower" }
ayuc_codegen = { path = "../ayuc_codegen" }
ayuc_sema = { path = "../ayuc_sema" }
ayuc_resolve = { path = "../ayuc_resolve" }
ayuc_diagnostic = { path = "../ayuc_diagnostic" }
