[package]
name = "ayuc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ayuc_lexer = { path = "../ayuc_lexer" }
ayuc_source = { path = "../ayuc_source" }
ayuc_span = { path = "../ayuc_span" }
ayuc_common = { path = "../ayuc_common" }
ayuc_ast = { path = "../ayuc_ast" }
ariadne = { version = "0.6.0", default-features = false }
