[package]
name = "ayuc_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
ayuc_lexer = { path = "../ayuc_lexer" }
ayuc_span = { path = "../ayuc_span" }
ayuc_diagnostic = { path = "../ayuc_diagnostic" }
ayuc_ast = { path = "../ayuc_ast" }
ayuc_id = { path = "../ayuc_id" }
ayuc_session = { path = "../ayuc_session" }
