[package]
name = "ayuc_resolve"
version = "0.1.0"
edition = "2024"

[dependencies]
ayuc_id = { path = "../ayuc_id" }
ayuc_ast = { path = "../ayuc_ast" }
ayuc_span = { path = "../ayuc_span" }
ayuc_diagnostic = { path = "../ayuc_diagnostic" }
ayuc_session = { path = "../ayuc_session" }
slotmap = "1.1.1"
